kubernetes/flask_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plasma-donor

spec:
  replicas: 5
  selector:
    matchLabels:
      app: plasma-donor
  template:
    metadata:
      labels:
        app: plasma-donor

    spec:
      containers:
        - name: plasma-donor-container
          image: plasma-donor-testing
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              protocol: TCP
