kubernetes/flask_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plasma-donor-service
spec:
  type: ClusterIP
  ports:
    - port: 5000
  selector:
    app: plasma-donor
